--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,15 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+#development:
+#  <<: *default
+#  database: data_breach_visualization_development
+
 development:
-  <<: *default
+  adapter: postgresql
   database: data_breach_visualization_development
+  host: localhost
+
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
